; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_numeric.c_mod_var.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_numeric.c_mod_var.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_16__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_16__*, %struct.TYPE_16__*, %struct.TYPE_16__*)* @mod_var to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mod_var(%struct.TYPE_16__* %0, %struct.TYPE_16__* %1, %struct.TYPE_16__* %2) #0 {
  %4 = alloca %struct.TYPE_16__*, align 8
  %5 = alloca %struct.TYPE_16__*, align 8
  %6 = alloca %struct.TYPE_16__*, align 8
  %7 = alloca %struct.TYPE_16__, align 4
  store %struct.TYPE_16__* %0, %struct.TYPE_16__** %4, align 8
  store %struct.TYPE_16__* %1, %struct.TYPE_16__** %5, align 8
  store %struct.TYPE_16__* %2, %struct.TYPE_16__** %6, align 8
  %8 = call i32 @init_var(%struct.TYPE_16__* %7)
  %9 = load %struct.TYPE_16__*, %struct.TYPE_16__** %4, align 8
  %10 = load %struct.TYPE_16__*, %struct.TYPE_16__** %5, align 8
  %11 = call i32 @div_var(%struct.TYPE_16__* %9, %struct.TYPE_16__* %10, %struct.TYPE_16__* %7, i32 0, i32 0)
  %12 = load %struct.TYPE_16__*, %struct.TYPE_16__** %5, align 8
  %13 = load %struct.TYPE_16__*, %struct.TYPE_16__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @mul_var(%struct.TYPE_16__* %12, %struct.TYPE_16__* %7, %struct.TYPE_16__* %7, i32 %15)
  %17 = load %struct.TYPE_16__*, %struct.TYPE_16__** %4, align 8
  %18 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %19 = call i32 @sub_var(%struct.TYPE_16__* %17, %struct.TYPE_16__* %7, %struct.TYPE_16__* %18)
  %20 = call i32 @free_var(%struct.TYPE_16__* %7)
  ret void
}

declare dso_local i32 @init_var(%struct.TYPE_16__*) #1

declare dso_local i32 @div_var(%struct.TYPE_16__*, %struct.TYPE_16__*, %struct.TYPE_16__*, i32, i32) #1

declare dso_local i32 @mul_var(%struct.TYPE_16__*, %struct.TYPE_16__*, %struct.TYPE_16__*, i32) #1

declare dso_local i32 @sub_var(%struct.TYPE_16__*, %struct.TYPE_16__*, %struct.TYPE_16__*) #1

declare dso_local i32 @free_var(%struct.TYPE_16__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
